api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: task-system

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
      - name: api

        image: ayolannister/task-api:v1

        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: task-system

spec:
  selector:
    app: api

  ports:
  - port: 5000
    targetPort: 5000
