frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: task-system

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: ayolannister/task-operatingsystem-frontend:latest
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: task-system

spec:
  type: NodePort

  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 3000
