svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-app-service
spec:
  type: ClusterIP
  selector:
    app: task-app
  ports:
    - port: 80
      targetPort: 5000
