ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-system-ingress
  namespace: task-system

spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
